create migrations table -done

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=skoobooks
 APP_ENV=local
 APP_KEY=base64:hla9i300g7l0JR+YWx+q0wIcj/qsr6fa7iwPZCq0UCs=
 APP_DEBUG=true
-APP_URL=http://angelspearlinfotech.com/skoobooks/
+APP_URL=http://localhost/order_management/
 
 LOG_CHANNEL=stack
 
